--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,11 @@
         <activity android:name=".ShakeGame"
             android:parentActivityName=".UserActivity"
             android:screenOrientation="locked"></activity>
+        <activity android:name=".LeaderBoard"
+            android:parentActivityName=".UserActivity"
+            android:screenOrientation="locked">
 
+        </activity>
 
     </application>
 
